src/test/ui/variants/variant-used-as-type.stderr
error[E0573]: expected type, found variant `Ty::A`
  --> $DIR/variant-used-as-type.rs:17:7
   |
LL |     B(Ty::A),
   |       ^^^^^ not a type
help: you can try using the variant's enum
   |
LL |     B(Ty),
   |       ^^
help: you can try using the variant's enum
   |
LL |     B(E),
   |       ^

error[E0573]: expected type, found variant `E::A`
  --> $DIR/variant-used-as-type.rs:27:6
   |
LL | impl E::A {}
   |      ^^^^ not a type
help: you can try using the variant's enum
   |
LL | impl Ty {}
   |      ^^
help: you can try using the variant's enum
   |
LL | impl E {}
   |      ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0573`.
